--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-icons": "^4.4.0",
+    "react-stars": "^2.2.5",
     "styled-components": "^5.3.5",
     "swr": "^1.3.0"
   },
@@ -21,6 +22,7 @@
     "@types/node": "18.0.0",
     "@types/react": "18.0.14",
     "@types/react-dom": "18.0.5",
+    "@types/react-stars": "^2.2.1",
     "@types/styled-components": "^5.1.25",
     "eslint": "^8.18.0",
     "eslint-config-next": "12.2.0",
