--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "cypress": "cypress open",
+    "e2e": "start-server-and-test dev http://localhost:3000 cypress"
   },
   "dependencies": {
     "@mui/material": "^5.8.6",
@@ -15,6 +17,7 @@
     "react-dom": "18.2.0",
     "react-icons": "^4.4.0",
     "react-stars": "^2.2.5",
+    "start-server-and-test": "^1.14.0",
     "styled-components": "^5.3.5",
     "swr": "^1.3.0"
   },
@@ -24,6 +27,7 @@
     "@types/react-dom": "18.0.5",
     "@types/react-stars": "^2.2.1",
     "@types/styled-components": "^5.1.25",
+    "cypress": "^10.3.0",
     "eslint": "^8.18.0",
     "eslint-config-next": "12.2.0",
     "typescript": "4.7.4"
